[package]
name = "sentryclips_process"
version = "0.1.0"
authors = ["Javier Arrieta <javier.arrieta@zalando.ie>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
regex = "1.3"
im = "14.2"
log = "0.4"
env_logger = "0.7"
